--- a/CTI www.thecoaches.com (comp9.modelsmith.com)/www.thecoaches.com/corporate_sandbox/accounting.html
+++ b/CTI www.thecoaches.com (comp9.modelsmith.com)/www.thecoaches.com/corporate_sandbox/accounting.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if IE 7]> <html class="ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]> <html class="ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
-<head><script>(function(_,e,rr,s){_errs=[s];var c=_.onerror;_.onerror=function(){var a=arguments;_errs.push(a);c&&c.apply(this,a)};var b=function(){var c=e.createElement(rr),b=e.getElementsByTagName(rr)[0];c.src="//beacon.errorception.com/"+s+".js";c.async=!0;b.parentNode.insertBefore(c,b)};_.addEventListener?_.addEventListener("load",b,!1):_.attachEvent("onload",b)}) (window,document,"script","521be34325609c1f79001116");</script>
-
-
+<head>
 	<meta charset="utf-8">
 	<title>CTI - Accounting Admin</title>
 	<link rel="stylesheet" media="all" href="_ui/css/main.css">
