--- a/CTI ww2 sites(corp7.modelssmith.com)/www.coaching-courses.com/index_test.html
+++ b/CTI ww2 sites(corp7.modelssmith.com)/www.coaching-courses.com/index_test.html
@@ -464,37 +464,37 @@
             <!--Begin Seo Wording -->
             <div id="text-area" style="padding:12px;">
                 <p>
-                    CTI is a world-leading coach training organisation, with a strong presence in the UK and Europe. CTI has trained over 50,000 coaches globally, and today trains more new coaches annually than any other coach training school worldwide. CTI’s Co-Active Coach Training courses are rooted in an approach whose view is that inner experience and outer behaviors are inexorably linked. As Co-Active executive coaches, life coaches, team coaches, leadership coaches, and more, CTI-trained coaches understand the critical relationship between being and doing, and how to leverage this to support clients seeking transformational change.
+                    <abbr title="Coaches Training Institute">CTI</abbr> is a world-leading coach training organisation, with a strong presence in the UK and Europe. <abbr title="Coaches Training Institute">CTI</abbr> has trained over 50,000 coaches globally, and today trains more new coaches annually than any other coach training school worldwide. <abbr title="Coaches Training Institute">CTI</abbr>’s Co-Active Coach Training courses are rooted in an approach whose view is that inner experience and outer behaviors are inexorably linked. As Co-Active executive coaches, life coaches, team coaches, leadership coaches, and more, <abbr title="Coaches Training Institute">CTI</abbr>-trained coaches understand the critical relationship between being and doing, and how to leverage this to support clients seeking transformational change.
                 </p>
                 <br />
-                <strong>Groundbreaking Approach</strong>
+                <h2>Groundbreaking Approach</h2>
                 <p>
-                    CTI’s UK coach training courses are offered in a unique person-to-person experiential learning environment. Our curriculum and proprietary method of coaching training has been honed over the past 20+ years, and is delivered by the world’s largest coaching faculty, numbering in the hundreds. The quality of our course leaders is unparalleled.  Each is an expert facilitators and master coach able to model high-caliber Co-Active coaching. They have trained many of the world’s strongest and most successful coaches.
+                    <abbr title="Coaches Training Institute">CTI</abbr>’s UK coach training courses are offered in a unique person-to-person experiential learning environment. Our curriculum and proprietary method of coaching training has been honed over the past 20+ years, and is delivered by the world’s largest coaching faculty, numbering in the hundreds. The quality of our course leaders is unparalleled.  Each is an expert facilitators and master coach able to model high-caliber Co-Active coaching. They have trained many of the world’s strongest and most successful coaches.
                 </p>
                 <br />
-                <strong>Global Relevance</strong>
+                <h2>Global Relevance</h2>
                 <p>
-                    CTI’s UK coach training is based in London, England. CTI has been in the UK for 15 years. Our courses and operations there provide one of the main hubs for our offerings in Europe and the beyond. While London is our main venue in the UK, we also offer our core curriculum in Manchester and Cardiff (Wales). Attending one of our accredited life coaching courses in the UK, you may find many different nationalities represented in the room of 25 participants ensuring for a rich cross-cultural experience.
+                    <abbr title="Coaches Training Institute">CTI</abbr>’s UK coach training is based in London, England. <abbr title="Coaches Training Institute">CTI</abbr> has been in the UK for 15 years. Our courses and operations there provide one of the main hubs for our offerings in Europe and the beyond. While London is our main venue in the UK, we also offer our core curriculum in Manchester and Cardiff (Wales). Attending one of our accredited life coaching courses in the UK, you may find many different nationalities represented in the room of 25 participants ensuring for a rich cross-cultural experience.
                 </p>
                 <br />
-                <strong>Shaping the Field</strong>                
+                <h2>Shaping the Field</h2>                
                 <p>
-                    CTI’s founders and senior leaders have been partners with the International Coach Federation (ICF) since its inception. As a result, we have played a significant role in shaping the profession of coaching. This means all our coach training courses provide what you need to acquire the industry standard coaching qualifications from both the ICF as well as more recently the EMCC. From accredited life coaching to executive coaching and including all other forms of transformational coaching, CTI and its community of Co-Active coaches has continuously set the standards to ensure the coaching profession continues to evolve.
+                    <abbr title="Coaches Training Institute">CTI</abbr>’s founders and senior leaders have been partners with the International Coach Federation (ICF) since its inception. As a result, we have played a significant role in shaping the profession of coaching. This means all our coach training courses provide what you need to acquire the industry standard coaching qualifications from both the ICF as well as more recently the EMCC. From accredited life coaching to executive coaching and including all other forms of transformational coaching, <abbr title="Coaches Training Institute">CTI</abbr> and its community of Co-Active coaches has continuously set the standards to ensure the coaching profession continues to evolve.
                 </p>
                 <br />
-                <strong>Shaping Leaders</strong>
+                <h2>Shaping Leaders</h2>
                 <p>
-                    CTI not only trains coaches, we also train leaders. Through our intensive 10-month cohort-based CTI Leadership programme, we help people clarify their calling, understand the impact they most want to have, move past self-limiting beliefs, and connect to their inherent leadership presence. Armed with this sense of self and purpose, CTI Leadership participants go on to make their greatest possible contributions to their world.
+                    <abbr title="Coaches Training Institute">CTI</abbr> not only trains coaches, we also train leaders. Through our intensive 10-month cohort-based <abbr title="Coaches Training Institute">CTI</abbr> Leadership programme, we help people clarify their calling, understand the impact they most want to have, move past self-limiting beliefs, and connect to their inherent leadership presence. Armed with this sense of self and purpose, <abbr title="Coaches Training Institute">CTI</abbr> Leadership participants go on to make their greatest possible contributions to their world.
                 </p>
                 <br />
-                <strong>Shaping Organisations</strong>
+                <h2>Shaping Organisations</h2>
                 <p>
-                    Additionally, CTI works with businesses throughout the UK, Europe, and the Middle East to transform organizational cultures based on Co-Active principles.  Co-Active coaching by its very nature cultivates transformational change for the sake of what matters most, to individuals and organisations. By bringing a Co-Active transformative approach to human capital development, companies create a workforce that is able collectively and courageously to step forward, set radical expectations, and achieve unprecedented outcomes. Through business coach training programmes, we teach leaders to be coaches themselves, and proliferate Co-Active principles throughout their organisations. Additionally, through leadership development and relationship agility experiential programmes, CTI trains leaders to be at their most compelling, and in their most effective relationships to themselves and the people of their organizations.
+                    Additionally, <abbr title="Coaches Training Institute">CTI</abbr> works with businesses throughout the UK, Europe, and the Middle East to transform organizational cultures based on Co-Active principles.  Co-Active coaching by its very nature cultivates transformational change for the sake of what matters most, to individuals and organisations. By bringing a Co-Active transformative approach to human capital development, companies create a workforce that is able collectively and courageously to step forward, set radical expectations, and achieve unprecedented outcomes. Through business coach training programmes, we teach leaders to be coaches themselves, and proliferate Co-Active principles throughout their organisations. Additionally, through leadership development and relationship agility experiential programmes, <abbr title="Coaches Training Institute">CTI</abbr> trains leaders to be at their most compelling, and in their most effective relationships to themselves and the people of their organizations.
                 </p>
                 <br />
-                <strong>Solid Foundation</strong>
+                <h2>Solid Foundation</h2>
                 <p>
-                    Supporting all of CTI’s life coach training and leadership development programming, our Co-Active Network of professional colleagues and Co-Active Coaches provide a wealth of resources available to support your ongoing development. Additionally, CTI is renowned for its customer service, with a global team in place to help guide you towards the most suitable courses and programming to meet your goals, and provide support at key points along your journey towards becoming a powerful Co-Active coach.
+                    Supporting all of <abbr title="Coaches Training Institute">CTI</abbr>’s life coach training and leadership development programming, our Co-Active Network of professional colleagues and Co-Active Coaches provide a wealth of resources available to support your ongoing development. Additionally, <abbr title="Coaches Training Institute">CTI</abbr> is renowned for its customer service, with a global team in place to help guide you towards the most suitable courses and programming to meet your goals, and provide support at key points along your journey towards becoming a powerful Co-Active coach.
                 </p>
                 <br/>
                 <br/>
@@ -504,7 +504,7 @@
             <div id="video-area">
                 <table width="500" border="0" align="center">
                     <tr>
-                        <p align="center" style="font-size:14px"><strong>Please click on the videos below to see the stories of two recent CTI graduates:</strong></p>
+                        <p align="center" style="font-size:14px"><strong>Please click on the videos below to see the stories of two recent <abbr title="Coaches Training Institute">CTI</abbr> graduates:</strong></p>
                     </tr>
                     <tr>
                         <td align="center"><p align="center" style="font-size:14px"><strong>Shivani</strong></p></td>
